# mcp-agent-ops

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: project-taxonomy.md
docs/design/high-level/: architecture.md
docs/reference/: copied-scripts.md  mcp-tools.md  test-plan.md
docs/requirements/functional/: core-capabilities.md
docs/requirements/technical/: runtime-and-safety.md
src/mcp_agent_ops/: __init__.py  __main__.py  identity.py
src/mcp_agent_ops/adapters/: __init__.py
src/mcp_agent_ops/adapters/cli/: __init__.py  claims.py
src/mcp_agent_ops/adapters/mcp/: __init__.py  audit.py  server.py
src/mcp_agent_ops/claims/: __init__.py  engine.py  service.py
src/mcp_agent_ops/skill_catalog/: __init__.py  catalog.py  models.py
src/mcp_agent_ops/skill_validation/: __init__.py  engine.py  service.py
src/mcp_agent_ops/technology_detection/: __init__.py  engine.py  service.py
src/mcp_agent_ops/verification/: __init__.py  markdown_links.py  models.py  paths.py  yaml_files.py
tests/compatibility/: test_claim_cli.py  test_main_cli.py
tests/contract/: test_server.py
tests/integration/stdio/: test_stdio_server.py
tests/unit/claims/: test_service.py
tests/unit/skill_catalog/: test_catalog.py
tests/unit/skill_validation/: test_validation.py
tests/unit/technology_detection/: test_detection.py
tests/unit/verification/: test_markdown_links.py  test_yaml_files.py
